--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "crud",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "hbs": "^4.1.2",
+    "express-session": "^1.17.2",
+    "hbs": "^4.2.0",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.1"
-  }
+    "nodemailer": "^6.7.1",
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ezeborga/borga_servicios.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ezeborga/borga_servicios/issues"
+  },
+  "homepage": "https://github.com/ezeborga/borga_servicios#readme",
+  "description": ""
 }
-
